qt-restricted-extras/qscintilla/gen_qsciscintilla.h

typedef struct QColor QColor;
typedef struct QMetaObject QMetaObject;
QMetaObject* QsciScintilla_virtualbase_metaObject(const void* self);
void* QsciScintilla_virtualbase_metacast(void* self, const char* param1);
int QsciScintilla_virtualbase_metacall(void* self, int param1, int param2, void** param3);
struct miqt_array /* of struct miqt_string */  QsciScintilla_virtualbase_apiContext(void* self, int pos, int* context_start, int* last_word_start);
bool QsciScintilla_virtualbase_findFirst(void* self, struct miqt_string expr, bool re, bool cs, bool wo, bool wrap, bool forward, int line, int index, bool show, bool posix, bool cxx11);
bool QsciScintilla_virtualbase_findFirstInSelection(void* self, struct miqt_string expr, bool re, bool cs, bool wo, bool forward, bool show, bool posix, bool cxx11);
bool QsciScintilla_virtualbase_findNext(void* self);
void QsciScintilla_virtualbase_recolor(void* self, int start, int end);
void QsciScintilla_virtualbase_replace(void* self, struct miqt_string replaceStr);
void QsciScintilla_virtualbase_append(void* self, struct miqt_string text);
void QsciScintilla_virtualbase_autoCompleteFromAll(void* self);
void QsciScintilla_virtualbase_autoCompleteFromAPIs(void* self);
void QsciScintilla_virtualbase_autoCompleteFromDocument(void* self);
void QsciScintilla_virtualbase_callTip(void* self);
void QsciScintilla_virtualbase_clear(void* self);
void QsciScintilla_virtualbase_copy(void* self);
void QsciScintilla_virtualbase_cut(void* self);
void QsciScintilla_virtualbase_ensureCursorVisible(void* self);
void QsciScintilla_virtualbase_ensureLineVisible(void* self, int line);
void QsciScintilla_virtualbase_foldAll(void* self, bool children);
void QsciScintilla_virtualbase_foldLine(void* self, int line);
void QsciScintilla_virtualbase_indent(void* self, int line);
void QsciScintilla_virtualbase_insert(void* self, struct miqt_string text);
void QsciScintilla_virtualbase_insertAt(void* self, struct miqt_string text, int line, int index);
void QsciScintilla_virtualbase_moveToMatchingBrace(void* self);
void QsciScintilla_virtualbase_paste(void* self);
void QsciScintilla_virtualbase_redo(void* self);
void QsciScintilla_virtualbase_removeSelectedText(void* self);
void QsciScintilla_virtualbase_replaceSelectedText(void* self, struct miqt_string text);
void QsciScintilla_virtualbase_resetSelectionBackgroundColor(void* self);
void QsciScintilla_virtualbase_resetSelectionForegroundColor(void* self);
void QsciScintilla_virtualbase_selectAll(void* self, bool select);
void QsciScintilla_virtualbase_selectToMatchingBrace(void* self);
void QsciScintilla_virtualbase_setAutoCompletionCaseSensitivity(void* self, bool cs);
void QsciScintilla_virtualbase_setAutoCompletionReplaceWord(void* self, bool replace);
void QsciScintilla_virtualbase_setAutoCompletionShowSingle(void* self, bool single);
void QsciScintilla_virtualbase_setAutoCompletionSource(void* self, int source);
void QsciScintilla_virtualbase_setAutoCompletionThreshold(void* self, int thresh);
void QsciScintilla_virtualbase_setAutoCompletionUseSingle(void* self, int single);
void QsciScintilla_virtualbase_setAutoIndent(void* self, bool autoindent);
void QsciScintilla_virtualbase_setBraceMatching(void* self, int bm);
void QsciScintilla_virtualbase_setBackspaceUnindents(void* self, bool unindent);
void QsciScintilla_virtualbase_setCaretForegroundColor(void* self, QColor* col);
void QsciScintilla_virtualbase_setCaretLineBackgroundColor(void* self, QColor* col);
void QsciScintilla_virtualbase_setCaretLineFrameWidth(void* self, int width);
void QsciScintilla_virtualbase_setCaretLineVisible(void* self, bool enable);
void QsciScintilla_virtualbase_setCaretWidth(void* self, int width);
void QsciScintilla_virtualbase_setColor(void* self, QColor* c);
void QsciScintilla_virtualbase_setCursorPosition(void* self, int line, int index);
void QsciScintilla_virtualbase_setEolMode(void* self, int mode);
void QsciScintilla_virtualbase_setEolVisibility(void* self, bool visible);
void QsciScintilla_virtualbase_setFolding(void* self, int fold, int margin);
void QsciScintilla_virtualbase_setIndentation(void* self, int line, int indentation);
void QsciScintilla_virtualbase_setIndentationGuides(void* self, bool enable);
void QsciScintilla_virtualbase_setIndentationGuidesBackgroundColor(void* self, QColor* col);
void QsciScintilla_virtualbase_setIndentationGuidesForegroundColor(void* self, QColor* col);
void QsciScintilla_virtualbase_setIndentationsUseTabs(void* self, bool tabs);