qt-restricted-extras/qscintilla/gen_qsciscintilla.nim

  inputMethodQuery*: proc(vtbl, self: pointer, query: cint): pointer {.cdecl, raises: [], gcsafe.}
  mouseDoubleClickEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseMoveEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  mousePressEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  mouseReleaseEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  paintEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  resizeEvent*: proc(vtbl, self: pointer, e: pointer): void {.cdecl, raises: [], gcsafe.}
  scrollContentsBy*: proc(vtbl, self: pointer, dx: cint, dy: cint): void {.cdecl, raises: [], gcsafe.}
  minimumSizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  sizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  setupViewport*: proc(vtbl, self: pointer, viewport: pointer): void {.cdecl, raises: [], gcsafe.}
  eventFilter*: proc(vtbl, self: pointer, param1: pointer, param2: pointer): bool {.cdecl, raises: [], gcsafe.}
  viewportEvent*: proc(vtbl, self: pointer, param1: pointer): bool {.cdecl, raises: [], gcsafe.}
  viewportSizeHint*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  devType*: proc(vtbl, self: pointer, ): cint {.cdecl, raises: [], gcsafe.}
  setVisible*: proc(vtbl, self: pointer, visible: bool): void {.cdecl, raises: [], gcsafe.}
  heightForWidth*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  hasHeightForWidth*: proc(vtbl, self: pointer, ): bool {.cdecl, raises: [], gcsafe.}
  paintEngine*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  keyReleaseEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  enterEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  leaveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  moveEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  closeEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  tabletEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  actionEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  showEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  hideEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  nativeEvent*: proc(vtbl, self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr clong): bool {.cdecl, raises: [], gcsafe.}
  metric*: proc(vtbl, self: pointer, param1: cint): cint {.cdecl, raises: [], gcsafe.}
  initPainter*: proc(vtbl, self: pointer, painter: pointer): void {.cdecl, raises: [], gcsafe.}
  redirected*: proc(vtbl, self: pointer, offset: pointer): pointer {.cdecl, raises: [], gcsafe.}
  sharedPainter*: proc(vtbl, self: pointer, ): pointer {.cdecl, raises: [], gcsafe.}
  timerEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  childEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  customEvent*: proc(vtbl, self: pointer, event: pointer): void {.cdecl, raises: [], gcsafe.}
  connectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQsciScintilla_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QsciScintilla_virtualbase_metaObject".}
proc fcQsciScintilla_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QsciScintilla_virtualbase_metacast".}
proc fcQsciScintilla_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QsciScintilla_virtualbase_metacall".}
proc fcQsciScintilla_virtualbase_apiContext(self: pointer, pos: cint, context_start: ptr cint, last_word_start: ptr cint): struct_miqt_array {.importc: "QsciScintilla_virtualbase_apiContext".}
proc fcQsciScintilla_virtualbase_findFirst(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, wrap: bool, forward: bool, line: cint, index: cint, show: bool, posix: bool, cxx11: bool): bool {.importc: "QsciScintilla_virtualbase_findFirst".}
proc fcQsciScintilla_virtualbase_findFirstInSelection(self: pointer, expr: struct_miqt_string, re: bool, cs: bool, wo: bool, forward: bool, show: bool, posix: bool, cxx11: bool): bool {.importc: "QsciScintilla_virtualbase_findFirstInSelection".}
proc fcQsciScintilla_virtualbase_findNext(self: pointer, ): bool {.importc: "QsciScintilla_virtualbase_findNext".}
proc fcQsciScintilla_virtualbase_recolor(self: pointer, start: cint, endVal: cint): void {.importc: "QsciScintilla_virtualbase_recolor".}
proc fcQsciScintilla_virtualbase_replace(self: pointer, replaceStr: struct_miqt_string): void {.importc: "QsciScintilla_virtualbase_replace".}
proc fcQsciScintilla_virtualbase_append(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_virtualbase_append".}
proc fcQsciScintilla_virtualbase_autoCompleteFromAll(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_autoCompleteFromAll".}
proc fcQsciScintilla_virtualbase_autoCompleteFromAPIs(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_autoCompleteFromAPIs".}
proc fcQsciScintilla_virtualbase_autoCompleteFromDocument(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_autoCompleteFromDocument".}
proc fcQsciScintilla_virtualbase_callTip(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_callTip".}
proc fcQsciScintilla_virtualbase_clear(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_clear".}
proc fcQsciScintilla_virtualbase_copy(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_copy".}
proc fcQsciScintilla_virtualbase_cut(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_cut".}
proc fcQsciScintilla_virtualbase_ensureCursorVisible(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_ensureCursorVisible".}
proc fcQsciScintilla_virtualbase_ensureLineVisible(self: pointer, line: cint): void {.importc: "QsciScintilla_virtualbase_ensureLineVisible".}
proc fcQsciScintilla_virtualbase_foldAll(self: pointer, children: bool): void {.importc: "QsciScintilla_virtualbase_foldAll".}
proc fcQsciScintilla_virtualbase_foldLine(self: pointer, line: cint): void {.importc: "QsciScintilla_virtualbase_foldLine".}
proc fcQsciScintilla_virtualbase_indent(self: pointer, line: cint): void {.importc: "QsciScintilla_virtualbase_indent".}
proc fcQsciScintilla_virtualbase_insert(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_virtualbase_insert".}
proc fcQsciScintilla_virtualbase_insertAt(self: pointer, text: struct_miqt_string, line: cint, index: cint): void {.importc: "QsciScintilla_virtualbase_insertAt".}
proc fcQsciScintilla_virtualbase_moveToMatchingBrace(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_moveToMatchingBrace".}
proc fcQsciScintilla_virtualbase_paste(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_paste".}
proc fcQsciScintilla_virtualbase_redo(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_redo".}
proc fcQsciScintilla_virtualbase_removeSelectedText(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_removeSelectedText".}
proc fcQsciScintilla_virtualbase_replaceSelectedText(self: pointer, text: struct_miqt_string): void {.importc: "QsciScintilla_virtualbase_replaceSelectedText".}
proc fcQsciScintilla_virtualbase_resetSelectionBackgroundColor(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_resetSelectionBackgroundColor".}
proc fcQsciScintilla_virtualbase_resetSelectionForegroundColor(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_resetSelectionForegroundColor".}
proc fcQsciScintilla_virtualbase_selectAll(self: pointer, select: bool): void {.importc: "QsciScintilla_virtualbase_selectAll".}
proc fcQsciScintilla_virtualbase_selectToMatchingBrace(self: pointer, ): void {.importc: "QsciScintilla_virtualbase_selectToMatchingBrace".}
proc fcQsciScintilla_virtualbase_setAutoCompletionCaseSensitivity(self: pointer, cs: bool): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionCaseSensitivity".}
proc fcQsciScintilla_virtualbase_setAutoCompletionReplaceWord(self: pointer, replace: bool): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionReplaceWord".}
proc fcQsciScintilla_virtualbase_setAutoCompletionShowSingle(self: pointer, single: bool): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionShowSingle".}
proc fcQsciScintilla_virtualbase_setAutoCompletionSource(self: pointer, source: cint): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionSource".}
proc fcQsciScintilla_virtualbase_setAutoCompletionThreshold(self: pointer, thresh: cint): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionThreshold".}
proc fcQsciScintilla_virtualbase_setAutoCompletionUseSingle(self: pointer, single: cint): void {.importc: "QsciScintilla_virtualbase_setAutoCompletionUseSingle".}
proc fcQsciScintilla_virtualbase_setAutoIndent(self: pointer, autoindent: bool): void {.importc: "QsciScintilla_virtualbase_setAutoIndent".}
proc fcQsciScintilla_virtualbase_setBraceMatching(self: pointer, bm: cint): void {.importc: "QsciScintilla_virtualbase_setBraceMatching".}
proc fcQsciScintilla_virtualbase_setBackspaceUnindents(self: pointer, unindent: bool): void {.importc: "QsciScintilla_virtualbase_setBackspaceUnindents".}
proc fcQsciScintilla_virtualbase_setCaretForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_virtualbase_setCaretForegroundColor".}
proc fcQsciScintilla_virtualbase_setCaretLineBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_virtualbase_setCaretLineBackgroundColor".}
proc fcQsciScintilla_virtualbase_setCaretLineFrameWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_virtualbase_setCaretLineFrameWidth".}
proc fcQsciScintilla_virtualbase_setCaretLineVisible(self: pointer, enable: bool): void {.importc: "QsciScintilla_virtualbase_setCaretLineVisible".}
proc fcQsciScintilla_virtualbase_setCaretWidth(self: pointer, width: cint): void {.importc: "QsciScintilla_virtualbase_setCaretWidth".}
proc fcQsciScintilla_virtualbase_setColor(self: pointer, c: pointer): void {.importc: "QsciScintilla_virtualbase_setColor".}
proc fcQsciScintilla_virtualbase_setCursorPosition(self: pointer, line: cint, index: cint): void {.importc: "QsciScintilla_virtualbase_setCursorPosition".}
proc fcQsciScintilla_virtualbase_setEolMode(self: pointer, mode: cint): void {.importc: "QsciScintilla_virtualbase_setEolMode".}
proc fcQsciScintilla_virtualbase_setEolVisibility(self: pointer, visible: bool): void {.importc: "QsciScintilla_virtualbase_setEolVisibility".}
proc fcQsciScintilla_virtualbase_setFolding(self: pointer, fold: cint, margin: cint): void {.importc: "QsciScintilla_virtualbase_setFolding".}
proc fcQsciScintilla_virtualbase_setIndentation(self: pointer, line: cint, indentation: cint): void {.importc: "QsciScintilla_virtualbase_setIndentation".}
proc fcQsciScintilla_virtualbase_setIndentationGuides(self: pointer, enable: bool): void {.importc: "QsciScintilla_virtualbase_setIndentationGuides".}
proc fcQsciScintilla_virtualbase_setIndentationGuidesBackgroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_virtualbase_setIndentationGuidesBackgroundColor".}
proc fcQsciScintilla_virtualbase_setIndentationGuidesForegroundColor(self: pointer, col: pointer): void {.importc: "QsciScintilla_virtualbase_setIndentationGuidesForegroundColor".}
proc fcQsciScintilla_virtualbase_setIndentationsUseTabs(self: pointer, tabs: bool): void {.importc: "QsciScintilla_virtualbase_setIndentationsUseTabs".}
